@@ -1,3 +1,4 @@
-DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
-EBUILD kadu-ao_sound-0.6.5.ebuild 222 RMD160 9ec75384ca8cc317186a47ed35b2f30d17d78264 SHA1 cf2abb407fef0bf18872101aa92fd9584964d1d6 SHA256 4eca41ce09c839f7b7c27130ecfb4f223970acadcf399d49dd3233d8c6985b4c
-MISC ChangeLog 366 RMD160 86d87884cd586761ded0f32c21768a8f5d2ce2a8 SHA1 b54aa15e199fecd062f8daa7646ac6e0c3ba7c27 SHA256 90ea90e722b396daedf353351ea2a7e7c0e24aad4f78ce7558b31d0876439720
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
+EBUILD kadu-ao_sound-0.6.5.1.ebuild 316 RMD160 dfcfc61a171d8b851d333b6756ec9522a20f4b4d SHA1 aacfcca4d2a273f793d58a4ad3fb9be611750051 SHA256 7671ebe19c0715dbffa1fd149356e001174e596988f310f6915a16da808749ec
+MISC ChangeLog 549 RMD160 4c1a087dfefc5d5d1079b268f3ccf6d1c0e259ba SHA1 49bf3ccc249100ef3f76a2bc2f87f0170858749f SHA256 6f832e8aafac45ec6e6276a1e71a0faf9ccf6a7f77de086a6a29bf1de625947a
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
